[add] get thread analytics metrics
